@@ -361,6 +361,7 @@
                             <outputDirectory>${basedir}</outputDirectory>
                             <finalName>libs</finalName>
                             <appendAssemblyId>false</appendAssemblyId>
+                            <runOnlyAtExecutionRoot>true</runOnlyAtExecutionRoot>
                         </configuration>
                     </execution>
 
@@ -377,6 +378,7 @@
                             <outputDirectory>${basedir}/libs</outputDirectory>
                             <finalName>optional</finalName>
                             <appendAssemblyId>false</appendAssemblyId>
+                            <runOnlyAtExecutionRoot>true</runOnlyAtExecutionRoot>
                         </configuration>
                     </execution>
 
@@ -494,6 +496,26 @@
                     <skip>true</skip>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <version>1.4</version>
+                <configuration>
+                    <rules>
+                        <requireJavaVersion>
+                            <version>[1.7,1.8)</version>
+                        </requireJavaVersion>
+                    </rules>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
@@ -573,8 +595,6 @@
                                         <exclude>src/main/java/META-INF/services/javax.cache.spi.CachingProvider</exclude><!--cannot be changed-->
                                         <exclude>src/main/java/org/jetbrains/annotations/*.java</exclude><!--copyright-->
                                         <exclude>src/main/resources/META-INF/services/org.apache.hadoop.mapreduce.protocol.ClientProtocolProvider</exclude><!--cannot be changed-->
-                                        <exclude>modules/winservice/IgniteService.sln</exclude>
-                                        <exclude>modules/winservice/IgniteService/IgniteService.csproj</exclude>
                                         <!--shmem-->
                                         <exclude>ipc/shmem/**/Makefile.in</exclude><!--auto generated files-->
                                         <exclude>ipc/shmem/**/Makefile</exclude><!--auto generated files-->
@@ -1336,70 +1356,6 @@
                                     <finalName>bin</finalName>
                                     <appendAssemblyId>false</appendAssemblyId>
                                     <runOnlyAtExecutionRoot>true</runOnlyAtExecutionRoot>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-
-        <profile>
-            <id>opt-clns-prop</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-antrun-plugin</artifactId>
-                        <version>1.7</version>
-                        <inherited>false</inherited>
-                        <dependencies>
-                            <dependency>
-                                <groupId>org.apache.ignite</groupId>
-                                <artifactId>ignite-tools</artifactId>
-                                <version>${ignite.version}</version>
-                            </dependency>
-                        </dependencies>
-                        <executions>
-                            <execution>
-                                <id>optimized-classnames-generation</id>
-                                <goals>
-                                    <goal>run</goal>
-                                </goals>
-                                <phase>process-classes</phase>
-                                <configuration>
-                                    <target>
-                                        <java
-                                                classname="org.apache.ignite.tools.marshaller.optimized.OptimizedClassNamesGenerator"
-                                                fork="true"
-                                                failonerror="true"
-                                                maxmemory="1g">
-                                            <classpath>
-                                                <path location="${project.basedir}/modules/core/target/classes"/>
-                                                <path location="${project.basedir}/modules/aop/target/classes"/>
-                                                <path location="${project.basedir}/modules/aws/target/classes"/>
-                                                <path location="${project.basedir}/modules/email/target/classes"/>
-                                                <path location="${project.basedir}/modules/hadoop/target/classes"/>
-                                                <path location="${project.basedir}/modules/hibernate/target/classes"/>
-                                                <path location="${project.basedir}/modules/indexing/target/classes"/>
-                                                <path location="${project.basedir}/modules/jcl/target/classes"/>
-                                                <path location="${project.basedir}/modules/jta/target/classes"/>
-                                                <path location="${project.basedir}/modules/log4j/target/classes"/>
-                                                <path location="${project.basedir}/modules/rest-http/target/classes"/>
-                                                <path location="${project.basedir}/modules/schedule/target/classes"/>
-                                                <path location="${project.basedir}/modules/slf4j/target/classes"/>
-                                                <path location="${project.basedir}/modules/spring/target/classes"/>
-                                                <path location="${project.basedir}/modules/ssh/target/classes"/>
-                                                <path location="${project.basedir}/modules/urideploy/target/classes"/>
-                                                <path location="${project.basedir}/modules/web/target/classes"/>
-                                                <path location="${project.basedir}/modules/scalar/target/classes"/>
-                                                <path location="${project.basedir}/modules/visor-console/target/classes"/>
-                                                <path refid="maven.plugin.classpath"/>
-                                            </classpath>
-                                            <arg value="${project.basedir}/modules/core/src/main/java"/>
-                                            <jvmarg value="-XX:MaxPermSize=1g"/>
-                                        </java>
-                                    </target>
                                 </configuration>
                             </execution>
                         </executions>
